# markdown-documentation-formatter

./: .gitignore  README.md  __init__.py  _consts.py  _document.py  _main.py  _processing.py  _rules.py  _utils.py  action.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  run.ps1  virtualenv.ps1
.github/workflows/: ci.yml  test_end_to_end.yml  update_beta_tag.yml  update_latest_tag.yml
mddocformatter/: __init__.py  __main__.py  _consts.py  _document.py  _processing.py  cli.py  loading.py
mddocformatter/rules/: __init__.py  _addglossarylinks.py  _applymacros.py  _base.py  _createtableofcontents.py  _movetotargetdirrelative.py  _renameuniquelyforconfluence.py  _sanitizeinternallinks.py  _utils.py
mddocformatter/scripts/: cli.py
mddocproc/: __init__.py  _consts.py  _document.py  _loading.py  _processing.py  _rules.py  _utils.py  loading.py
mddocproc/rules/: _addglossarylinks.py  _applymacros.py  _base.py  _createtableofcontents.py  _movetotargetdirrelative.py  _renameuniquelyforconfluence.py  _rulesets.py  _sanitizeinternallinks.py  _utils.py
mddocproc/scripts/: cli.py
mddocproc/tests/: test_commandlineargs.py
test/: test_commandlineargs.py  test_rules.py
test/data/: test.md
tests/: test_cli.py  test_commandlineargs.py  test_document.py  test_end_to_end.py  test_glossarylinks.py  test_loading.py  test_movetotargetdirrelative.py  test_processing.py  test_rules.py  test_tableofcontents.py
tests/data/: consts.py  macros.py  rules.py
tests/data/doc test/: test.md
tests/data/docs/: Glossary.md  README.md
tests/data/docs/sub section 2/: README.md
tests/rules/: test_applymacros.py  test_glossarylinks.py  test_movetotargetdirrelative.py  test_renameuniquelyforconfluence.py  test_sanitizeinternallinks.py  test_tableofcontents.py
