[project]
name = "mddocproc"
authors = [
    {name = "Jonathan Pierce", email = "mddocproc@originaldaemon.com"},
]
description = "Utility to process documentation written in markdown in various ways."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["markdown", "confluence", "obsidian", "mdbook", "gitbook", "github"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.scripts]
mddocproc = "scripts:cli.py"

[tool.black]
line-length = 120
