[project]
name = "mddocformatter"
authors = [
    {name = "Jonathan Pierce", email = "mddocformatter@originaldaemon.com"},
]
description = "Utility to format documentation written in markdown for various use cases."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["markdown", "confluence", "obsidian", "mdbook", "gitbook", "github"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {test = { file = ["requirements-test.txt"] }}

[project.scripts]
mddocformatter = "scripts:cli.py"

[tool.black]
line-length = 120

[tool.flake8]
ignore = ['E203']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
